k8s/gaming/minecraft/resources/minecraft.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - image: itzg/minecraft-server:2025.10.5-java21@sha256:0062e45ec8aa8bdbeeb6b4ad0e15df804c4525f0e208b66d899ab677230ee0e9
          name: minecraft
          resources:
            requests:
              memory: 2G
            limits:
              memory: 4G
          ports:
            - name: minecraft
              containerPort: 25565
          readinessProbe:
            exec:
              command:
                ['/usr/local/bin/mc-monitor', 'status', '--host', 'localhost']
            initialDelaySeconds: 20
            periodSeconds: 5
            failureThreshold: 20
          livenessProbe:
            exec:
              command:
                ['/usr/local/bin/mc-monitor', 'status', '--host', 'localhost']
            initialDelaySeconds: 120
            periodSeconds: 60
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-volume

---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: minecraft
      port: 25565
      targetPort: minecraft

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: funnel
  annotations:
    tailscale.com/funnel: 'true'
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: service
      port:
        number: 25565
  tls:
    - hosts:
        - minecraft
